--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 				<button type="button" class="btn btn-primary btn-lg">Get Started</button>
 			</div>
 		</div>
-		<div class="carousel-item active">
+		<div class="carousel-item">
 			<img src="img/background2.png">
 		</div>
-		<div class="carousel-item active">
+		<div class="carousel-item">
 			<img src="img/background3.png">
 		</div>
 	</div>
