--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://m.w3newbie.com/you-tube.css">
 </head>
 <body>
 
@@ -117,7 +116,7 @@
 			<p>Built with the latest version of Bootstrap, Bootstrap 4.</p>
 		</div>
 		<div class="col-xs-12 col-sm-6 col-md-4">
-			<i class="fas fa-css3"></i>
+			<i class="fab fa-css3"></i>
 			<h3>CSS3</h3>
 			<p>Built with the latest version of CSS, CSS3.</p>
 		</div>
@@ -180,18 +179,135 @@
   
 <!--- Meet the team -->
 
+<div class="contaiber-fluid padding">
+	<div class="row welcome text-center">
+		<div class="col-12">
+			<h1 class="display-4">Meet the Team</h1>
+		</div>
+	</div>
+</div>
+
 
 <!--- Cards -->
 
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-md-4">
+			<div class="card">
+				<img class="card-img-top" src="img/team1.png">
+				<div class="card-body">
+					<h4 class="card-title">John Doe</h4>
+					<p class="card-text">
+						John is an Internet entrepreneur with almost 20 years of experience
+					</p>
+					<a href="#" class="btn btn-outline-secondary">See Profile</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-4">
+			<div class="card">
+				<img class="card-img-top" src="img/team2.png">
+				<div class="card-body">
+					<h4 class="card-title">Max Müller</h4>
+					<p class="card-text">
+						John is an Internet entrepreneur with almost 20 years of experience
+					</p>
+					<a href="#" class="btn btn-outline-secondary">See Profile</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-md-4">
+			<div class="card">
+				<img class="card-img-top" src="img/team3.png">
+				<div class="card-body">
+					<h4 class="card-title">Phil Ho</h4>
+					<p class="card-text">
+						John is an Internet entrepreneur with almost 20 years of experience
+					</p>
+					<a href="#" class="btn btn-outline-secondary">See Profile</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 <!--- Two Column Section -->
+
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-lg-6">
+			<h2>Our Philosophy</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reprehenderit beatae impedit est praesentium ipsum quod assumenda velit officiis molestiae quam ullam eligendi perspiciatis alias, reiciendis, nisi consequatur odio debitis?</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reprehenderit beatae impedit est praesentium ipsum quod assumenda velit officiis molestiae quam ullam eligendi perspiciatis alias, reiciendis, nisi consequatur odio debitis?</p>
+			<br>
+		</div>
+		<div class="col-lg-6">
+			<img src="img/bootstrap2.png" class="img-fluid">
+		</div>
+	</div>
+	<hr class="my-4">
+</div>
 
 
 <!--- Connect -->
 
+<div class="container-fluid padding">
+	<div class="row text-center padding">
+		<div class="col-12">
+			<h2>Connect</h2>
+		</div>
+		<div class="col-12 social padding">
+			<a href="#"><i class="fab fa-facebook"></i></a>
+			<a href="#"><i class="fab fa-twitter"></i></a>
+			<a href="#"><i class="fab fa-google-plus-g"></i></a>
+			<a href="#"><i class="fab fa-instagram"></i></a>
+			<a href="#"><i class="fab fa-youtube"></i></a>
+		</div>
+	</div>
+</div>
+
 
 <!--- Footer -->
 
+<footer>
+	<div class="container-fluid padding">
+		<div class="row text-center">
+			<div class="col-md-4">
+				<img src="img/w3newbie.png">
+				<hr class="light">
+				<p>555-555-5555</p>
+				<p>email@yemail.com</p>
+				<p>100 Street Name</p>
+				<p>City, State, 00000</p>
+			</div>
+
+			<div class="col-md-4">
+				<hr class="light">
+				<p>Our Hours</p>
+				<hr class="light">
+				<p>Mondy: 9pm - 5pm</p>
+				<p>Saturday: 10am - 4pm</p>
+				<p>Sunday: closed</p>
+			</div>
+
+			<div class="col-md-4">
+				<hr class="light">
+				<p>Service Area</p>
+				<hr class="light">
+				<p>City, State, 00000</p>
+				<p>City, State, 00000</p>
+				<p>City, State, 00000</p>
+				<p>City, State, 00000</p>
+			</div>
+			<div class="col-12">
+				<hr class="light-100">
+				<h5>&copy: molham.al.khodari.com</h5>
+			</div>
+		</div>
+	</div>
+</footer>
 
 
 
