update max to sophie

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 			<div class="card">
 				<img class="card-img-top" src="img/team2.png">
 				<div class="card-body">
-					<h4 class="card-title">Max Müller</h4>
+					<h4 class="card-title">Sophie Müller</h4>
 					<p class="card-text">
 						John is an Internet entrepreneur with almost 20 years of experience
 					</p>
